# Schwinger_MG

./: .gitignore  CMakeLists.txt  README.md  REPORT_chronological_eigenspace_forecasting.md  REPORT_eigenspace_tracking.md  REPORT_forecasting_strategy_review.md  RESULTS_hmc_physics_benchmark.md  RESULTS_prolongator_study.md  mode_hmc_benchmark.cpp
src/: #linalg.cpp#  CMakeLists.txt  REPORT_chronological_eigenspace_forecasting.md  coarse_op.cpp  coarse_op.h  config.h  dirac.h  eigen_evolve.cpp  eigen_forecast.cpp  eigensolver.cpp  eigensolver.h  eigensolver_core.cpp  eo_multigrid.h  feast_solver.cpp  feast_solver.h  gauge.h  hmc.cpp  hmc.h  hmc_forces.cpp  hmc_multiscale.cpp  hmc_trajectory.cpp  hmc_utils.cpp  hmc_utils.h  lattice.h  linalg.cpp  linalg.h  main.cpp  mg_builder.cpp  mg_builder.h  mode_forecast_study.cpp  mode_forecast_study.h  mode_hmc.cpp  mode_hmc.h  mode_hmc_benchmark.cpp  mode_hmc_benchmark.h  mode_mg_hmc.cpp  mode_mg_hmc.h  mode_studies.cpp  mode_studies.h  multigrid.cpp  (+7 more)
